# JobHuntTool

./: .gitignore  README.md  package-lock.json
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: database.db  main.py
backend/app/chroma_messages_db/: chroma.sqlite3
backend/app/config/: agents.yaml  crew_config.py  keys.py  logger.py  sheets_format.py  tasks.yaml
backend/app/db/: database.py
backend/app/models/: create_table.py  email_summary.py  gpt_feedback.py  memo_query.py  openai_client_models.py  user.py
backend/app/routers/: audio_response.py  company_job.py  google.py  upload_router.py  user_info.py
backend/app/schemas/: email_schema.py
backend/app/services/: crew_client.py  memo_service.py  openai_client.py  perplexity_client.py  spreadsheet_service.py
backend/app/services/base/: LLMResponseManager.py  llm_client.py
backend/app/services/clients/: async_client.py  crew_client.py  openai_client.py  perplexity_client.py
backend/app/services/email/: email_service.py
backend/app/services/format/: JSON.py  sheet_formater.py
backend/app/services/google/: email.py  sheets.py
backend/app/services/interview/: audio_feedback_service.py  extract_job.py  generate_question.py  insert_resume.py  resume_parser.py  summarize.py  text_to_speech.py
backend/app/services/job/: job_info_service.py  job_status_service.py  job_url_service.py
backend/app/services/llms/: crew_client.py
backend/app/services/memory/: in_memory.py  memo_service.py  (+2 more)
backend/app/test/: test_helpers.py
backend/app/utils/: helpers.py  text_cleaner.py
(+56 files in other folders)
