[project]
name = "backend-env"
version = "0.1.0"
description = "poetry depency manager for jobhunt tool"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "<3.13,>=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "requests (>=2.32.3,<3.0.0)",
    "aiohttp (>=3.11.14,<4.0.0)",
    "crewai (>=0.108.0,<0.109.0)",
    "chroma (>=0.2.0,<0.3.0)",
    "httpx (>=0.23.0,<0.28.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "duckduckgo-search (>=7.5.3,<8.0.0)",
    "langchain-chroma (>=0.2.2,<0.3.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "selenium (>=4.30.0,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
